force-app/main/default/objects/Product2/fields/ProRatoDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProRatoDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if a non-inventory item is eligible to have a pro rato discount when the duration is less than 12 months</description>
    <label>Pro Rato Discount</label>
    <type>Checkbox</type>
</CustomField>