force-app/main/default/objects/Product2/fields/PublishingHouse__c.field-meta.xml
<CustomField>
    <fullName>PublishingHouse__c</fullName>
    <description>(R1-S1 by JD): Publlishing House.</description>
    <label>Publishing House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>