force-app/main/default/objects/Product2/fields/PublishingHouseDepartment__c.field-meta.xml
<CustomField>
    <fullName>PublishingHouseDepartment__c</fullName>
    <description>(R1-S1 by JD): Publishing House Department.</description>
    <label>Publishing House Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>