force-app/main/default/objects/Product2/fields/QuantitySelectionType__c.field-meta.xml
<CustomField>
    <fullName>QuantitySelectionType__c</fullName>
    <label>Quantity Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defaulted to Quantity</fullName>
            </value>
            <value>
                <fullName>Per number of students</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Ship-to</fullName>
                <isActive>false</isActive>
                <label>Ship-to</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>