force-app/main/default/objects/Product2/fields/RecurringProduct__c.field-meta.xml
<CustomField>
    <fullName>RecurringProduct__c</fullName>
    <formula>IF(NumberOfRevenueInstallments &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Product?</label>
    <type>Checkbox</type>
</CustomField>