force-app/main/default/objects/Product2/fields/Renewable__c.field-meta.xml
<CustomField>
    <fullName>Renewable__c</fullName>
    <formula>if( Or(TEXT(Renewal__c) = &apos;Manual&apos; ,  TEXT(Renewal__c) = &apos;Automatic&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>