force-app/main/default/objects/Product2/fields/ShortTitle__c.field-meta.xml
<CustomField>
    <fullName>ShortTitle__c</fullName>
    <description>(R1-S1 by JD): Short Title.</description>
    <label>Short Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>