force-app/main/default/objects/Product2/fields/SoldInSegment__c.field-meta.xml
<CustomField>
    <fullName>SoldInSegment__c</fullName>
    <label>Sold in segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegment</valueSetName>
    </valueSet>
</CustomField>