force-app/main/default/objects/Product2/fields/SoldSeparately__c.field-meta.xml
<CustomField>
    <fullName>SoldSeparately__c</fullName>
    <label>Sold Separately</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>LMO possible</fullName>
            </value>
            <value>
                <fullName>To be decided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>