force-app/main/default/objects/Product2/fields/StandardPrice__c.field-meta.xml
<CustomField>
    <fullName>StandardPrice__c</fullName>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>