force-app/main/default/objects/Product2/fields/StartDateBlock__c.field-meta.xml
<CustomField>
    <fullName>StartDateBlock__c</fullName>
    <label>Start Date Block</label>
    <type>Date</type>
</CustomField>