force-app/main/default/objects/Product2/fields/StockLevel__c.field-meta.xml
<CustomField>
    <fullName>StockLevel__c</fullName>
    <label>Stock Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sufficient</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Zero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>