force-app/main/default/objects/Product2/fields/Stocknumber__c.field-meta.xml
<CustomField>
    <fullName>Stocknumber__c</fullName>
    <label>Stock number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>