force-app/main/default/objects/Product2/fields/SuccessorItem__c.field-meta.xml
<CustomField>
    <fullName>SuccessorItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Successor Item</relationshipLabel>
    <relationshipName>SuccessorItems</relationshipName>
    <type>Lookup</type>
</CustomField>