force-app/main/default/objects/Product2/fields/TEMPDisabled__c.field-meta.xml
<CustomField>
    <fullName>TEMPDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP Disabled</label>
    <type>Checkbox</type>
</CustomField>