force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Item</fullName>
            </value>
            <value>
                <fullName>Non-inventory Item</fullName>
            </value>
            <value>
                <fullName>Item Group</fullName>
            </value>
            <value>
                <fullName>Kit/Package</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>