force-app/main/default/objects/Product2/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Item</fullName>
            </value>
            <value>
                <fullName>Invoice/Delivery Item</fullName>
            </value>
            <value>
                <fullName>Production Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>