force-app/main/default/objects/Product2/fields/Webcat__c.field-meta.xml
<CustomField>
    <fullName>Webcat__c</fullName>
    <label>Webcat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NU algemeen</fullName>
            </value>
            <value>
                <fullName>Bosatlas</fullName>
            </value>
            <value>
                <fullName>Lijsters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>