force-app/main/default/objects/Product2/fields/YearGroup__c.field-meta.xml
<CustomField>
    <fullName>YearGroup__c</fullName>
    <label>Year Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>