force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Type__c</columns>
    <columns>DeliveryStatus__c</columns>
    <columns>ISBNArticleNumber__c</columns>
    <columns>QuantitySelectionType__c</columns>
    <columns>DeliverComplete__c</columns>
    <columns>NameBrand__c</columns>
    <columns>OrderLineType__c</columns>
    <columns>Stocknumber__c</columns>
    <columns>SuccessorItem__c</columns>
    <columns>IsSuccessorItemActive__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>BlockReason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>