force-app/main/default/objects/Product2/listViews/AllProductsPlantyn.listView-meta.xml
<ListView>
    <fullName>AllProductsPlantyn</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Type__c</columns>
    <columns>DeliveryStatus__c</columns>
    <columns>ISBNArticleNumber__c</columns>
    <columns>OrderLineType__c</columns>
    <columns>Stocknumber__c</columns>
    <columns>SuccessorItem__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>BlockReason__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>cas</value>
    </filters>
    <label>All Products Plantyn</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>