force-app/main/default/objects/Product2/listViews/Custom_Search.listView-meta.xml
<ListView>
    <fullName>Custom_Search</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ArticleNumber__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomPricingAllowed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Custom Search</label>
</ListView>